LangLit now uses the new LanguageTag type ratehr than ScopedName to represent language tags

--- a/swish.cabal
+++ b/swish.cabal
@@ -47,7 +47,8 @@ Description:
   Changes in version @0.7.0.0@:
   .
   * RDF literals are now stored using the @Lit@, @LangLit@, or @TypedLit@ constructors
-  (@RDFLabel@) rather than using just @Lit@.
+  (@RDFLabel@) rather than using just @Lit@. Language codes are now represented
+  by @Swish.RDF.Vocabulary.LanguageTag@ rather than as a @ScopedName@.
   .
   * Removed @mkTypedLit@ from @Swish.RDF.RDFParser@; use
   @Swish.RDF.RDFDatatype.makeDataTypedLiteral@ instead.
