--- a/swish.cabal
+++ b/swish.cabal
@@ -58,6 +58,15 @@ Description:
   .
   * Removed un-used @containedIn@ element of the @LDGraph@ type class.
   .
+  * Removed un-used exports from @Swish.Utils.PartOrderedCollection@: 
+  @partCompareOrd@, @partCompareMaybe@, @partCompareListOrd@, and
+  @partCompareListPartOrd@.
+  .
+  * Removed the @Swish.Utils.MiscHelpers@ module.
+  .
+  * Removed various exported symbols from a range of modules as they were
+  unused.
+  .
   * Clarified that @Swish.RDF.RDFDatatypeXsdDecimal@ is for @xsd:decimal@ rather
   than @xsd:double@.
   .
@@ -65,12 +74,6 @@ Description:
   @containers@.
   .
   * Switch to @Control.Exception.try@ to avoid deprecation warnings from @System.IO.Error.try@.
-  .
-  * Removed un-used exports from @Swish.Utils.PartOrderedCollection@: 
-  @partCompareOrd@, @partCompareMaybe@, @partCompareListOrd@, and
-  @partCompareListPartOrd@.
-  .
-  * Removed the @Swish.Utils.MiscHelpers@ module.
   .
   Changes in previous versions can be found at <https://bitbucket.org/doug_burke/swish/src/tip/CHANGES>.
   .
