--- a/swish.cabal
+++ b/swish.cabal
@@ -163,7 +163,6 @@ Library
       Swish.RDF.Proof
       Swish.RDF.ProofContext
       Swish.RDF.Query
-      Swish.RDF.RDFVarBinding
       Swish.RDF.Ruleset
       Swish.RDF.SwishCommands
       Swish.RDF.SwishMain
@@ -187,6 +186,7 @@ Library
       Swish.Utils.PartOrderedCollection
       Swish.Utils.QName
       Swish.Utils.ShowM
+      Swish.VarBinding
       Data.Interned.URI
 
    ghc-options:
