--- a/swish.cabal
+++ b/swish.cabal
@@ -141,9 +141,9 @@ Library
       Swish.GraphPartition
       Swish.Proof
       Swish.RDF
-      Swish.RDF.BuiltInDatatypes
-      Swish.RDF.BuiltInMap
-      Swish.RDF.BuiltInRules
+      Swish.RDF.BuiltIn
+      Swish.RDF.BuiltIn.Datatypes
+      Swish.RDF.BuiltIn.Rules
       Swish.RDF.ClassRestrictionRule
       Swish.RDF.Datatype
       Swish.RDF.Datatype.XSD.Decimal
