--- a/swish.cabal
+++ b/swish.cabal
@@ -123,6 +123,7 @@ Library
       network >= 2.2 && < 2.4,
       old-locale == 1.0.*, 
       polyparse >= 1.6 && < 1.9,
+      semigroups >= 0.5 && < 0.9,
       text == 0.11.*,
       time >= 1.1 && < 1.5
 
