Moved Swish.RDF.Swish* to Swish.* and Swish.RDF.SwishMain is now just Swish
--HG--
rename : src/Swish/RDF/SwishCommands.hs => src/Swish/Commands.hs
rename : src/Swish/RDF/SwishMonad.hs => src/Swish/Monad.hs
rename : src/Swish/RDF/SwishScript.hs => src/Swish/Script.hs

--- a/swish.cabal
+++ b/swish.cabal
@@ -49,7 +49,9 @@ Description:
   * Moved a number of modules around: generic code directly into @Swish@
   and the @Swish.RDF.RDF*@ forms renamed to @Swish.RDF.*@. Some modules
   have been moved out of the @Swish.Utils.*@ namespace. Generic modules
-  have been placed into the @Data.*@ namespace.
+  have been placed into the @Data.*@ namespace. The @Swish.RDF.Swish*@
+  modules have been moved to @Swish.*@ and @Swish.RDF.SwishMain@ has
+  been removed; use @Swish@ instead.
   .
   * Parsing modules are now in the @Swish.RDF.Parser@ hierarchy and
   @Swish.RDF.RDFParser@ has been renamed to @Swish.RDF.Parser.Utils@.
@@ -144,11 +146,13 @@ Library
       Data.Ord.Partial
       Data.String.ShowLines
       Swish
+      Swish.Commands
       Swish.Datatype
       Swish.GraphClass
       Swish.GraphMatch
       Swish.GraphMem
       Swish.GraphPartition
+      Swish.Monad
       Swish.Namespace
       Swish.Proof
       Swish.QName
@@ -176,10 +180,6 @@ Library
       Swish.RDF.ProofContext
       Swish.RDF.Query
       Swish.RDF.Ruleset
-      Swish.RDF.SwishCommands
-      Swish.RDF.SwishMain
-      Swish.RDF.SwishMonad
-      Swish.RDF.SwishScript
       Swish.RDF.VarBinding
       Swish.RDF.Vocabulary
       Swish.RDF.Vocabulary.DublinCore
@@ -192,6 +192,7 @@ Library
       Swish.RDF.Vocabulary.XSD
       Swish.Rule
       Swish.Ruleset
+      Swish.Script
       Swish.Utils.ListHelpers
       Swish.VarBinding
 
