--- a/swish.cabal
+++ b/swish.cabal
@@ -229,6 +229,7 @@ Test-Suite test-graphpartition
    Build-Depends:
       base >=3 && < 5,
       HUnit == 1.2.*,
+      semigroups >= 0.5 && < 0.9,
       swish
 
 Test-Suite test-graph
