Local names now represented by Swish.QName.LName rather than Text

--- a/swish.cabal
+++ b/swish.cabal
@@ -62,6 +62,10 @@ Description:
   (@RDFLabel@) rather than using just @Lit@. Language codes are now represented
   by @Swish.RDF.Vocabulary.LanguageTag@ rather than as a @ScopedName@.
   .
+  * Local names are now represented by the #@wish.QName.LName@ type 
+  rather than as a @Text@ value. A few routines now return a @Maybe@ value
+  rather than error-ing out on invalid input.
+  .
   * Make use of @Data.List.NonEmpty@ in a few cases.
   .
   * Removed @mkTypedLit@ from @Swish.RDF.RDFParser@; use
