LookupMap: more removal of unused code

--- a/swish.cabal
+++ b/swish.cabal
@@ -92,8 +92,9 @@ Description:
   and in the bnode counts when formatting to N3/Turtle.
   .
   * Minor clean up of the @LookupMap@ module: @mergeReplaceOrAdd@ and @mergeReplace@
-  are now combined into @mergeReplace@; @mapSelect@ has been removed; documentation
-  slightly improved, and a few minor internal clean ups.
+  are now combined into @mergeReplace@; @mapSelect@, @mapApplyToAll@, and
+  @mapTranslate*@ have been removed; documentation slightly improved;
+  and a few minor internal clean ups.
   .
   * Clarified that @Swish.RDF.RDFDatatypeXsdDecimal@ is for @xsd:decimal@ rather
   than @xsd:double@.
