Remove equiv/subset; Fix NSGraph ordering; added ArcSet/RDFArcSet types; move more code to use Set; rationalization/clean up of some test code
--HG--
branch : graph-conversion-set

--- a/swish.cabal
+++ b/swish.cabal
@@ -47,18 +47,19 @@ Description:
   Changes in version @0.8.0.0@:
   .
   * The @LDGraph@ class now uses @Set (Arc lb)@, rather than @[Arc lb]@,
-  for @setArcs@, @getArcs@, and @update@. The @NSGraph@ instance now uses
-  a set rather than a list internally. There are a number of API tweaks -
+  for @setArcs@, @getArcs@, and @update@. Several data types - e.g.
+  @NSGraph@ - now use sets rather than lists. There are a number of API tweaks -
   e.g. the addition of Ord constraints and the removal of Functor, Foldable,
   and Traversable instances. Not all list of Arcs have been converted
   since a review is needed to see where it makes sense and where it does not.
   This definitely speeds up some operations but
   a full analysis has not been attempted.
   .
-  * A few other minor changes have been made: the removal of subset from
+  * A few other minor changes have been made: the removal of @subset@ and
+  @equiv@ from
   @Swish.Utils.ListHelpers@; the ordering used for @RDFLabel@ values has
   changed; added a @Monoid@ instance for @VarBinding@; added @Ord@
-  instances for a number of containers.
+  instances for a number of containers; removed some un-needed constraints.
   .
   Changes in previous versions can be found at <https://bitbucket.org/doug_burke/swish/src/tip/CHANGES>.
   .
@@ -184,6 +185,7 @@ Test-Suite test-builtinmap
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       swish
 
@@ -198,6 +200,7 @@ Test-Suite test-graphpartition
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       semigroups,
       swish
@@ -278,6 +281,7 @@ Test-Suite test-rdfdatatypexsdinteger
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       network,
       swish,
@@ -313,6 +317,7 @@ Test-Suite test-rdfproofcontext
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       network,
       swish,
@@ -346,6 +351,7 @@ Test-Suite test-rdfquery
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       network,
       swish,
@@ -379,6 +385,7 @@ Test-Suite test-varbinding
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       swish
 
@@ -393,6 +400,7 @@ Test-Suite test-lookupmap
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       swish
 
@@ -407,6 +415,7 @@ Test-Suite test-qname
 
    Build-Depends:
       base,
+      containers,
       HUnit == 1.2.*,
       network,
       swish,
