--- a/swish.cabal
+++ b/swish.cabal
@@ -59,7 +59,8 @@ Description:
   @equiv@ from
   @Swish.Utils.ListHelpers@; the ordering used for @RDFLabel@ values has
   changed; added a @Monoid@ instance for @VarBinding@; added @Ord@
-  instances for a number of containers; removed some un-needed constraints.
+  instances for a number of containers; removed some un-needed constraints;
+  added @Network.URI.Ord@.
   .
   * Bumped the minimum containers requirement to @0.5@.
   .
@@ -119,6 +120,7 @@ Library
       Data.LookupMap
       Data.Ord.Partial
       Data.String.ShowLines
+      Network.URI.Ord
       Swish
       Swish.Commands
       Swish.Datatype
