--- a/swish.cabal
+++ b/swish.cabal
@@ -1,5 +1,5 @@
 Name:               swish
-Version:            0.8.0.0
+Version:            0.8.0.1
 Stability:          experimental
 License:            LGPL
 License-file:       LICENSE 
@@ -43,6 +43,10 @@ Description:
   * RDF formal semantics entailment rule implementation.
   .
   * Complete, ready-to-run, command-line and script-driven programs.
+  .
+  Changes in version @0.8.0.0@:
+  .
+  * Internal changes to Turtle/N3 formatting. No user-visible changes.
   .
   Changes in version @0.8.0.0@:
   .
