--- a/swish.cabal
+++ b/swish.cabal
@@ -49,6 +49,8 @@ Description:
   * Restrict @hashable@ since tests fail with @1.1.2.5@
   (this is a hack).
   .
+  * Updated @directory@ constraint to include @1.2@ on ghc 7.6.
+  .
   Changes in version @0.8.0.1@:
   .
   * Internal changes to Turtle/N3 formatting. No user-visible changes.
@@ -110,7 +112,6 @@ Library
       base >=3 && < 5,
       binary == 0.5.*,
       containers >= 0.4 && < 0.6,
-      directory >= 1.0 && < 1.2,
       filepath >= 1.1 && < 1.4,
       -- hashable == 1.1.*,
       hashable >= 1.1 && < 1.1.2.4,
@@ -126,6 +127,11 @@ Library
       Build-Depends:   intern == 0.8
    if impl(ghc >= 7.4.0)
       Build-Depends:   intern >= 0.8 && < 1.0
+
+   if impl(ghc < 7.6.0)
+      Build-Depends:   directory >= 1.0 && < 1.2
+   if impl(ghc >= 7.6.0)
+      Build-Depends:   directory >= 1.0 && < 1.3
 
    Hs-Source-Dirs: src/
    Other-Modules:  Swish.RDF.Formatter.Internal
